cabal-version:      3.0
name:               wab
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             oliverpauffley
maintainer:         mrpauffley@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Expr, PrintExpr,
                      Simplifier, Resolver, Unscripter, Returns,
                      Tokenizer, Parser,
                      ExprStack, Blocks, LLVM
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1,
                      prettyprinter,
                      text,
                      containers,
                      mtl
    hs-source-dirs:   src
    default-language: Haskell2010
  default-extensions: OverloadedStrings
                      StrictData

executable wab
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.2.1,
        wab,
        text,
        prettyprinter

    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        StrictData

test-suite wab-test
    import:           warnings
    default-language: Haskell2010
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        wab,
        base ^>=4.18.2.1,
        tasty >= 0.11 && <1.5.3,
        tasty-hspec,
        tasty-golden,
        hspec,
        doctest,
